# dayofweek

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  dategenerator.cpp  dategenerator.h  dayofweek  dow.cpp  dow.h  main.cpp
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
docs/: highScore.xml
include/: Date.hpp  challenge_mode.hpp  dow.h  game.hpp  game_ui.hpp  normal_mode.hpp
src/: CMakeLists.txt  challenge_mode.cpp  date.cpp  dow.cpp  dow.ui  game.cpp  game_ui.cpp  normal_mode.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Helper.cpp  day_of_week_tests  day_of_week_tests[1]_include.cmake  day_of_week_tests[1]_tests.cmake  test_date_class.cpp
